--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,78 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap');
+
+
+
+/* Track */
+
+::-webkit-scrollbar{
+  width : 5px;
+  height: 6px;
+}
+::-webkit-scrollbar-track {
+  background: #5cd595; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #3feee6; 
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #55bcc9; 
 }
+
+
+*{
+margin: 0;
+padding: 0;
+
+}
+
+body {
+  box-sizing: border-box;
+  font-family: 'Merriweather', serif;
+
+ }
+
+ .text-primary-p{
+   color: palegreen;
+  font-size: 14px;
+  font-weight: 700;
+  }
+
+  .font-bold {
+  font-weight: 700;
+  }
+
+  .text-title{
+    color: black;
+  }
+
+  .text-lightblue{
+    color: lightblue;
+  }
+
+.container {
+  display: grid;
+  height: 100vh;
+  grid-template-columns: 0.8fr 1fr 1fr 1fr;
+  grid-template-rows: 0.2fr 3fr;
+  grid-template-areas: 
+  "sidebar nav nav nav"
+  "sidebar main main main";
+}
+
+@media only screen and (max-width: 978px) {
+  .container{
+    grid-template-columns: 1fr;
+    grid-template-rows: 0.2fr 3fr;
+    grid-template-areas: 
+    "nav"
+    "main";
+  }
+  
+}
+
+
+
